# aws-calculator-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  render.yaml  requirements-server.txt  requirements.txt  standard_calc.py
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  README.md  launch-posts.md
examples/: estimate.json
src/aws_calc_mcp/: __init__.py  api_server.py  cli.py  compute.py  core.py  parser.py  server.py  services.py
tests/: test_parser.py  test_services.py
