[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-calculator-mcp"
version = "1.0.1"
description = "Turn a list of AWS services into an official, shareable AWS Pricing Calculator link with real costs baked in. MCP server + REST API + CLI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["aws", "pricing", "calculator", "estimate", "mcp", "cost", "finops"]
authors = [{ name = "Viresh Solanki" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Client dependencies only — lightweight, NO browser. Enough to run the MCP/CLI
# against a hosted baker (AWS_CALC_API_URL).
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Local cost-baking (needs a browser). Run `playwright install chromium` after.
local = ["playwright>=1.40.0"]
# Hosted REST API server (the baker). Includes the browser engine.
server = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "playwright>=1.40.0"]

[project.scripts]
aws-calc-mcp = "aws_calc_mcp.server:run"   # MCP server (stdio) for Claude / IDEs
aws-calc     = "aws_calc_mcp.cli:main"     # command-line interface
aws-calc-api = "aws_calc_mcp.api_server:run"  # REST API (needs [server] extras)

[project.urls]
Homepage      = "https://github.com/vireshsolanki/aws-calculator-mcp"
Repository    = "https://github.com/vireshsolanki/aws-calculator-mcp"
Issues        = "https://github.com/vireshsolanki/aws-calculator-mcp/issues"
"Buy Me a Coffee" = "https://www.buymeacoffee.com/vireshsolanki"

[tool.setuptools.packages.find]
where = ["src"]
