[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-calculator-mcp"
version = "1.3.2"
description = "Describe AWS infra in plain English and get an official, shareable AWS Pricing Calculator link with real costs — as an MCP server, CLI, and REST API."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["aws", "pricing", "calculator", "estimate", "mcp", "cost", "finops",
            "cloud", "devops", "claude", "chatgpt", "llm", "ai"]
authors = [{ name = "Viresh Solanki" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

# Everything needed to work out-of-the-box, including the browser engine for
# cost-baking. Chromium itself is auto-downloaded on first use, so the user runs
# nothing extra.
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
# Optional: run the REST API server yourself (FastAPI). Not needed for MCP/CLI.
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]

[project.scripts]
aws-calc-mcp = "aws_calc_mcp.server:run"   # MCP server (stdio) for Claude / IDEs
aws-calc     = "aws_calc_mcp.cli:main"     # command-line interface (also interactive)
aws-calc-api = "aws_calc_mcp.api_server:run"  # REST API (needs [api] extras)

[project.urls]
Homepage      = "https://github.com/vireshsolanki/aws-calculator-mcp"
Repository    = "https://github.com/vireshsolanki/aws-calculator-mcp"
Issues        = "https://github.com/vireshsolanki/aws-calculator-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]
